# finanzas-pwa

apps/backend/: Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_init.py
apps/backend/providers/: bci.yaml
apps/backend/src/: main.py
apps/backend/src/api/: exports_router.py  gmail_router.py  health_router.py  other_routers.py  reports_router.py  transactions_api.py
apps/backend/src/core/: auth.py  config.py  database.py  errors.py  ratelimit.py
apps/backend/src/models/: models.py
apps/backend/src/services/: ingest_service.py  parser_service.py  seeds.py
apps/backend/tests/: test_api.py
apps/frontend/: globals.css  next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/app/components/: MainAppLayout.tsx
apps/frontend/app/components/lib/api/: client.ts  schema.d.ts
apps/frontend/app/components/ui/: calendar.tsx  card.tsx  command.tsx  skeleton.tsx  table.tsx
apps/frontend/app/dashboard/: page.tsx
apps/frontend/components/: MonthSelector.tsx
apps/frontend/components/public/: manifest.json
apps/frontend/components/ui/: button.tsx  card.tsx  popover.tsx  skeleton.tsx  toaster.tsx
apps/frontend/lib/: utils.ts
apps/frontend/lib/api/: client.ts
